<resources>
    <string name="app_name">Unknown_Borrower</string>
    <string name="action_settings">Settings</string>
    <string name="tv_info">Dashboard</string>
    <string name="incoming">Incoming</string>
    <string name="search">Search</string>
    <string name="outgoing">Outgoing</string>
    <string name="id1">Transaction ID:</string>
    <string name="idno">987654321</string>
    <string name="bid">Borrower ID:</string>
    <string name="bidno">Rounak</string>
    <string name="Date">Settled date :07-12-18</string>
    <string name="Lidno">Shweta</string>
    <string name="Lid">Lender ID:</string>
    <string name="Datel">Requested Date:07-11-18</string>
    <string name="Amount">Amount:</string>
    <string name="Cost">5000</string>
    <string name="Button">Ratings</string>
    <string name="Ratings">RATE HERE</string>
    <string name="unresponded1">Shweta</string>
    <string name="button1">DROP</string>
    <string name="payback1">Rounak</string>
    <string name="paybackbutton">PAY</string>
    <string name="view_profile">View Profile</string>
    <string name="Date12">Requested Date: 03/02/2019</string>
    <string name="date1">Requested Date: 31/01/19</string>
    <string name="date2">Requested Date: 15/01/19</string>
    <string name="date3">Pay Back Date: 06/02/19</string>
    <string name="button2">PAY</string>
    <string name="button3">DECLINE</string>
    <string name="toolbar_title">Contacts</string>
    <string name="action_search">Search for people </string>
    <string name="search_hint">Type name…</string>
    <string name="show_password">show_password</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="mobile_number">mobile_number</string>
    <string name="or_forgot_password">or, forgot password</string>

    <!-- String for the profile activity -->
    <string name="contactNum">+91 9773237954</string>
    <string name="email">NJnisarg@gmail.com</string>
    <string name="city">Bangalore</string>
    <string name="state">Karnataka</string>
    <string name="age">20</string>
    <string name="org">Microsoft, India</string>
    <string name="gender">M</string>
    <string name="name">Nisarg S. Joshi</string>
</resources>
