<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools">

    <!--View
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/colorPrimary"/-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="50dp">

    <android.support.v7.widget.CardView
        android:layout_width="419dp"
        android:layout_height="270dp"
        android:layout_marginBottom="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">

            <TextView

                android:id="@+id/textView"
                android:layout_width="185dp"
                android:layout_height="59dp"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/id1"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/requestDateTextView"
                app:layout_constraintEnd_toStartOf="@+id/textView2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="140dp"
                android:layout_height="60dp"
                android:layout_marginStart="44dp"
                android:layout_marginLeft="44dp"
                android:layout_marginTop="20dp"
                android:hint="@string/idno"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/requestDateTextView"
                android:layout_width="81dp"
                android:layout_height="42dp"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:hint="@string/bid"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="113dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:hint="@string/bidno"
                app:layout_constraintBaseline_toBaselineOf="@+id/requestDateTextView"
                app:layout_constraintStart_toEndOf="@+id/requestDateTextView" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="116dp"
                android:layout_height="34dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="45dp"
                android:layout_marginRight="45dp"
                android:hint="@string/Date"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="81dp"
                android:layout_height="42dp"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:hint="@string/Lid"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/requestDateTextView" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="113dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:hint="@string/Lidno"
                app:layout_constraintStart_toEndOf="@+id/textView8"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="116dp"
                android:layout_height="34dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginEnd="45dp"
                android:layout_marginRight="45dp"
                android:hint="@string/Datel"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView9" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="81dp"
                android:layout_height="39dp"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:hint="@string/Amount"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="82dp"
                android:layout_height="37dp"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:hint="@string/Cost"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView12"
                app:layout_constraintStart_toEndOf="@+id/textView12" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="256dp"
                android:layout_marginLeft="256dp"
                android:layout_marginTop="40dp"
                android:hint="@string/Button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>


    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Button" />

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Button" />
</LinearLayout>
</ScrollView>
    <!--</android.support.constraint.ConstraintLayout>-->