<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="100dp"

    app:layout_constraintCircleRadius="10dp"
    android:background="@color/colorAccent"
    tools:context=".loginActivity">


    <EditText
        android:id="@+id/mobileNumberEditText"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/mobile_number"
        android:paddingLeft="10dp"
        android:inputType="phone"
        android:background="@drawable/my_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="56dp"
        android:paddingLeft="10dp"
        android:background="@drawable/my_border"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mobileNumberEditText" />

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/checkbox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="55dp"
        android:onClick="showPassword"
        android:text="@string/show_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

    <TextView
        android:id="@+id/forgotPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:onClick="forgotPassword"
        android:text="@string/or_forgot_password"
        android:textColor="#1A237E"
        app:layout_constraintBottom_toTopOf="@+id/registration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="106dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/my_border"
        android:onClick="loginButtonClicked"
        android:text="@string/login"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/forgotPasswordTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox" />

    <TextView
        android:id="@+id/registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="207dp"
        android:onClick="register"
        android:text="Register Here"
        android:textColor="#1A237E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordTextView" />

</android.support.constraint.ConstraintLayout>