<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout
    android:id="@+id/drawer_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            app:theme="@style/AppTheme.AppBarOverlay" />

        <ImageView
            android:id="@+id/app_bk"
            android:maxHeight="800dp"
            android:layout_marginTop="55dp"
            android:layout_height="600dp"
            android:layout_width="420dp">
        </ImageView>


        <Button
            android:id="@+id/incoming"
            android:layout_width="108dp"
            android:layout_height="60dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="525dp"
            android:background="@drawable/my_border"
            android:text="@string/incoming" />

        <Button
            android:id="@+id/search"
            android:layout_width="104dp"
            android:layout_height="60dp"
            android:layout_marginStart="128dp"
            android:layout_marginLeft="128dp"
            android:layout_marginTop="525dp"
            android:background="@drawable/my_border"
            android:text="@string/search" />

        <Button
            android:id="@+id/outgoing"
            android:layout_width="108dp"
            android:layout_height="60dp"
            android:layout_marginLeft="245dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="525dp"
            android:text="@string/outgoing"
            android:background="@drawable/my_border"/>

    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/drawer_header"
        app:menu="@menu/drawer_menu"
        app:itemIconTint="#8c0000FF"
        app:itemTextColor="#E6000000"
        />
</android.support.v4.widget.DrawerLayout>