<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="81dp"
    android:layout_alignParentStart="true"
    android:layout_alignParentLeft="true"
    app:cardCornerRadius="10dp"
    android:background="@drawable/my_border"
    android:layout_marginTop="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent">

        <TextView
            android:id="@+id/name"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:hint="@string/unresponded1"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/drop_button"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/my_button"
            android:hint="@string/button1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintCircleRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="DROP" />

        <TextView
            android:id="@+id/date"
            android:layout_width="250dp"
            android:layout_height="25dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/Date12"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <TextView
            android:id="@+id/tranMadeID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="16dp"
            android:text="TextView"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/date"
            app:layout_constraintEnd_toStartOf="@+id/drop_button"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>
